Fixed that awkward space, made the scroll animation responsive for tablet as well (remaining for mobile devices), Yet to fix the responsiveness issues with spacings for scroll animation

--- a/style.css
+++ b/style.css
@@ -478,7 +478,7 @@ nav ul li a:hover {
   max-width: 37.5rem;
   text-align: center;
   /* margin: 1.25rem 0 3rem; */
-  margin-bottom: 3rem;
+  margin-bottom: 1.5rem;
 }
 
 
@@ -495,16 +495,12 @@ nav ul li a:hover {
   --card-spacing: 3rem;
   gap: var(--card-spacing);
   padding-bottom: calc(var(--card-spacing) * 2);
-  transform: translateY(calc(100% - var(--card-spacing) * 2));
 }
 
 .service-card {
-  /* position: sticky; */
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* margin: auto; */
   width: 95%;
   min-height: 27rem;
   padding: 3.2rem 3.6rem;
@@ -513,55 +509,21 @@ nav ul li a:hover {
   background: var(--color-grey-1);
   box-shadow: 1rem 1rem 0rem var(--color-grey-4);
   outline: 0.075rem solid var(--color-grey-4);
-
-  /* --transform-y: -100%; */
 }
 
 .service-card-1 {
-  /* top: 0;
-  left: 0; */
-
-  /* z-index: 1; */
-
-  /* right: 20%;
-  top: 16rem; */
-  /* background: #fcf8f3; */
 }
 .service-card-2 {
-  /* margin-left: var(--card-spacing); */
-  
   position: absolute;
   top: calc(var(--card-spacing));
   left: calc(var(--card-spacing));
-  
-  /* transform: translate(var(--left-margin), calc(var(--transform-y) + var(--top-margin))); */
-  
-  /* z-index: 2; */
-  
-  /* top: 2rem;
-  left: 2rem; */
-  
-  /* margin-bottom: -2rem;
-  top: 18rem; */
-  /* background: #fff7fc; */
+  transform: translateY(100%);
 }
 .service-card-3 {
-  /* margin-left: calc(var(--card-spacing) * 2); */
-
   position: absolute;
   top: calc(var(--card-spacing) * 2);
   left: calc(var(--card-spacing) * 2);
-  
-  /* transform: translate(calc(var(--left-margin) * 2), calc(var(--transform-y) * 2 + var(--top-margin) * 2)); */
-  
-  /* z-index: 3; */
-  /* top: 4rem;
-  left: 4rem; */
-
-  /* margin-bottom: -4rem;
-  left: 20%;
-  top: 20rem; */
-  /* background: #eef7ff; */
+  transform: translateY(100%);
 }
 
 .service-card-content {
@@ -607,7 +569,9 @@ nav ul li a:hover {
 
   .service-cards {
     width: 96%;
-    padding-bottom: 2rem;
+    /* padding-bottom: 2rem; */
+
+    --card-spacing: 5rem;
   }
 
   .service-card {
@@ -625,15 +589,17 @@ nav ul li a:hover {
   }
 
   .service-card-1 {
-    top: 12rem;
+    /* top: 12rem; */
   }
 
   .service-card-2 {
-    top: 14rem;
+    left: 0;
+    /* top: 14rem; */
   }
-
+  
   .service-card-3 {
-    top: 16rem;
+    left: 0;
+    /* top: 16rem; */
   }
 }
 
